# openreview-scraper

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MANIFEST.in  Makefile  README.md  agent-harness.json  openreview-scraper  pyproject.toml
.agents/skills/linear-project/: SKILL.md
.agents/skills/linear-project/agents/: openai.yaml
.agents/skills/linear-project/references/: issue-patterns.md  project-map.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: package-verification.yml  release-publish.yml
docs/: architecture.md  release-process.md
docs/agent-ops/: architecture-invariants.md  core-beliefs.md  index.md  plans.md  pr-loop.md  quality-score.md  reliability.md  security.md  testing.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 20260318-adaptive-rate-limit-pausing.md  20260318-automated-development-gap-closure.md  20260318-cli-only-port.md  20260318-cli-packaging-distribution.md  20260318-download-queue-priority.md  20260318-linear-github-project-ops.md  20260318-optional-gcs-storage-mode.md  20260318-parallel-local-downloads.md
scripts/: bootstrap_local_cli.py  check_agent_docs.py  check_architecture.py  run_packaging_smoke.py  run_repo_checks.py
src/openreview_scraper/: __init__.py  __main__.py  cli.py  db.py  models.py  openreview.py  service.py  settings.py  storage.py  worker.py
src/openreview_scraper/migrations/: 0001_initial.sql  0002_pdf_metadata.sql  0003_scale_indexes.sql  0004_worker_sync_jobs.sql  0005_download_jobs.sql  0006_forum_cache.sql  0007_download_priority.sql
tests/: test_bootstrap_local_cli.py  test_cli_contract.py  test_cli_integration.py  test_db_integration.py  test_migrations.py  test_models.py  test_openreview_network.py  test_packaging_smoke.py  test_service_worker.py  test_settings.py  test_storage.py
