[project]
name = "openreview-scraper"
dynamic = ["version"]
description = "CLI-only OpenReview tooling"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [
    { name = "retail-farmer-1997" }
]
maintainers = [
    { name = "retail-farmer-1997" }
]
keywords = [
    "openreview",
    "cli",
    "papers",
    "research",
    "scraper",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1",
    "openreview-py>=1.59.0",
    "requests>=2.32.5",
    "rich>=14.1.0",
]

[project.urls]
Homepage = "https://github.com/retail-farmer-1997/openreview-scraper"
Repository = "https://github.com/retail-farmer-1997/openreview-scraper"
Issues = "https://github.com/retail-farmer-1997/openreview-scraper/issues"

[project.scripts]
openreview-scraper = "openreview_scraper.cli:main_entry"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[dependency-groups]
packaging = [
    "build>=1.3.0",
    "setuptools>=69",
    "twine>=6.2.0",
    "wheel>=0.45.1",
]

[tool.setuptools.dynamic]
version = { attr = "openreview_scraper.__version__" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openreview_scraper = ["migrations/*.sql"]
